--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ p {
 }
 #SUV { 
     background-color:rgb(1, 105, 114);
+    border-radius: 6px;
 }
 #Luxury { 
     background-color:rgb(0, 64, 63);
