--- a/index.css
+++ b/index.css
@@ -2,29 +2,49 @@
     font-family: 'Lexend Deca', sans-serif;
 }
 
+
 .car-container{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 20px;
+    margin: 50px;
     align-content:center ;
     background-color: silver;
     padding: 10%;
     
 }
+button {
+    border: none;
+    background-color: #fff;
+    color: inherit;
+    padding: 11.2px 24px;
+    border-radius: 25px;
+    font-weight: bold;
+    cursor: pointer;
+    align-self: flex-start;
+    transition: all 0.3s ease;
+  } 
+button:hover {
+    background-color: transparent;
+    color: #fff;
+    border: 2px solid #fff;}
 h1{
     color: white;
 }
 p {
     display: flex;
-    max-width: 300px;
+    max-width: 200px;
     color: hsla(0, 0%, 100%, 0.75);
 }
 .car-item{
-    padding: 5px;
+    padding: 60px;
     flex-grow: 1;
 ;
 }
+.card img {
+    width: 40px;
+    margin-bottom: 24px;
+    opacity: 0.8;}
 #sedan { 
     background-color:rgb(226, 133, 37);
     border-radius: 6px;
