--- a/index.css
+++ b/index.css
@@ -53,8 +53,12 @@ p {
 #SUV { 
     background-color:rgb(1, 105, 114);
     border-radius: 6px;
+    border-top-right-radius: 0px;
+
 }
 #Luxury { 
     background-color:rgb(0, 64, 63);
     border-radius: 6px;
+    border-top-right-radius: 0px;
+
 }
